syntax = "proto3";
package log;

service LogService {
  rpc SendLog(LogEntry) returns (SendLogResponse);
}

message LogEntry {
  string service = 1;
  string level = 2; // INFO, WARN, ERROR
  string message = 3;
  int64 timestamp = 4; // unix epoch
}

message SendLogResponse {
  string log_id = 1;
  string status = 2; // "OK"
}
